cmake_minimum_required(VERSION 3.0)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(headerconverter C CXX)
add_executable(headerconverter headerconverter.cpp)
target_include_directories(headerconverter PUBLIC /lib/llvm-12/include)
target_link_directories(headerconverter PUBLIC /lib/llvm-12/lib)
target_link_libraries(headerconverter PUBLIC clang)